--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+## **3.1.2**
+    New Trackers
+        * OldToonsWorld -> [@ZMarkC]
+
+<br>
+
 ## **3.1.1**
     New Trackers
         * OnlyEncodes -> [@edge2020tgx]
