--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+## **3.1.3**
+    New Trackers
+        * Shareisland -> [@tiberio87]
+
+    Bug Fixes
+        * Issue#155: Free-leech flag changes for Unit3d v7.0+
+
+<br>
+
 ## **3.1.2**
     New Trackers
         * OldToonsWorld -> [@ZMarkC]
