--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+## **3.1.4**
+    New Trackers
+        * Vision-HD -> [@marcusnyrog]
+
+<br>
+
 ## **3.1.3**
     New Trackers
         * Shareisland -> [@tiberio87]
