--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,15 @@
+## **3.1.5**
+    New Image host 
+        * PTScreens -> [@PTScreens]
+        
+    New Tracker
+        * DarkLand -> [@darklandy]
+    
+    Bug Fixes
+        * Fixed Torrent.desi api -> [@highlamb]
+
+<br>
+
 ## **3.1.4**
     New Trackers
         * Vision-HD -> [@marcusnyrog]
