Updated readme for release

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+## **3.1.6**
+    New Tracker
+        * Yoinked -> [@docd00m]
+
+<br>
+
 ## **3.1.5**
     New Image host 
         * PTScreens -> [@PTScreens]
