--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,18 @@
     New Tracker
         * Yoinked -> [@docd00m]
 
+    New Features
+        * Added more scene groups & streaming services -> [@tiberio87]
+        * Added support for GitLab Sentry error and exception tracking
+
+    Bug Fixes
+        * Fixed BLU announce URL
+
+    Underhood Changes
+        * Code Refactoring
+        * E2E Tests
+        * Updated MAL database
+
 <br>
 
 ## **3.1.5**
