feature: Template based tracker descriptions

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,20 @@
+## **3.1.8**
+    New Features
+      * Per tracker custom description templates
+
+    Underhood Changes
+      * Updated MyAnimeList mappings
+      * Replace GitLab with BugSink for error tracking
+
+    Bug Fixes
+      * Issue#165: Pixhost screenshot upload error
+      * Issue#167: ACM upload fails due to URL change
+      * Issue#159: Memory failure when using torf
+      * Issue#198: UnicodeEncodeError: 'charmap' codec can't encode character '\u017b'
+      * Issue#199: KeyError: 'title' in guessit result
+
+<br>
+
 ## **3.1.7**
     New Tracker
         * PrivateSilverScreen
