--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,19 @@
+## **3.2**
+    New Features
+        * Support for encrypted config.env files
+        * Added VC-1 codec support from blu-ray disks
+        * Added Dolby Digital Ex codec support from blu-ray disks
+        * [Reuploader] Added support for authenticated mongo db with examples
+
+    Underhood Changes
+        * Fixed pyyaml dependency
+
+    Bug Fixes
+        * Issue#203: Uploads fails when tmdb doesn't have any poster
+        * Issue#204: Uploading to wrong tracker with right tracker's API key and PID
+
+<br>
+
 ## **3.1.9**
     New Tracker
         * Seedpool
